@@ -44,6 +44,7 @@ depth: 1
  * Avoid an error when the moderation panel (admin dashboard) contains both snippets and private pages (Matt Westcott)
  * When deleting collections, ensure the collection name is correctly shown in the success message (LB (Ben) Johnston)
  * Filter out comments on Page editing counts that do not correspond to a valid field / block path on the page such as when a field has been removed (Matt Westcott)
+ * Allow `PublishMenuItem` to more easily support overriding its label via `construct_page_action_menu` (Sébastien Corbin)
 
 ### Documentation
 
